# TelecomCourse

./: .gitignore  README.md
sources/HTTP/: CMakeLists.txt  main.cpp
sources/POP3/: CMakeLists.txt  format.h  main.cpp  pop3.cpp  pop3.h  socket.cpp  socket.h
sources/TCP/client/: main.c
sources/TCP/server/: TCPServer.c  TCPServer.sln  TCPServer.vcxproj  TCPServer.vcxproj.filters
sources/UDP/client/: UDPClient.c  UDPClient.sln  UDPClient.vcxproj  UDPClient.vcxproj.filters
sources/UDP/server/: UDPServer.pro  main.c
